welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:9: error: type mismatch;
 found   : Unit
 required: Int
    if(speed>=81){
    ^caughtSpeeding:21: error: type mismatch;
 found   : Unit
 required: Int
    if(speed>=86){
    ^